--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "url-wunder-short",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.6.2",
+    "material-ui": "latest",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "material-ui": "latest"
+    "redux-saga": "latest",
+    "shortid": "latest"
   },
   "devDependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@types/node": "^17.0.25",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "typescript": "^4.6.3"
   }
 }
