--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@mui/material": "^5.6.2",
+    "axios": "^0.26.1",
+    "dashify": "^2.0.0",
+    "firebase-admin": "^10.1.0",
     "material-ui": "latest",
     "next": "12.1.5",
     "react": "18.0.0",
