--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "redux-saga": "latest",
-    "shortid": "latest"
+    "tinyurl": "latest"
   },
   "devDependencies": {
     "@emotion/react": "^11.5.0",
@@ -26,6 +26,17 @@
     "@types/node": "^17.0.25",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "prettier": "latest",
+    "@trivago/prettier-plugin-sort-imports": "latest"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true,
+    "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
   }
 }
