--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "redux-saga": "latest",
-    "tinyurl": "latest"
+    "shortid": "latest"
   },
   "devDependencies": {
     "@emotion/react": "^11.5.0",
