--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "redux-saga": "latest",
-    "shortid": "latest"
+    "shortid": "latest",
+    "react-copy-to-clipboard": "latest"
   },
   "devDependencies": {
     "@emotion/react": "^11.5.0",
