--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "../../Library/Caches/JetBrains/WebStorm2021.3/javascript/typings/jest/27.5.0/node_modules/@types/jest/index.d.ts"
   ],
   "exclude": [
     "node_modules"
