--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@mui/material": "^5.6.2",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
     "axios": "^0.26.1",
     "dashify": "^2.0.0",
     "firebase-admin": "^10.1.0",
@@ -17,30 +19,35 @@
     "next": "12.1.5",
     "nivo": "latest",
     "react": "18.0.0",
+    "react-copy-to-clipboard": "latest",
     "react-dom": "18.0.0",
     "redux-saga": "latest",
-    "shortid": "latest",
-    "react-copy-to-clipboard": "latest"
+    "shortid": "latest"
   },
   "devDependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@types/node": "^17.0.25",
+    "@trivago/prettier-plugin-sort-imports": "latest",
     "@types/jest": "26.0.14",
+    "@types/node": "^17.0.25",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
-    "typescript": "^4.6.3",
-    "prettier": "latest",
-    "@trivago/prettier-plugin-sort-imports": "latest",
     "jest": "26.4.2",
-    "ts-jest": "26.4.1"
+    "prettier": "latest",
+    "ts-jest": "26.4.1",
+    "typescript": "^4.6.3"
   },
   "prettier": {
     "trailingComma": "all",
     "tabWidth": 4,
     "semi": false,
     "singleQuote": true,
-    "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+    "importOrder": [
+      "^@core/(.*)$",
+      "^@server/(.*)$",
+      "^@ui/(.*)$",
+      "^[./]"
+    ],
     "importOrderSeparation": true,
     "importOrderSortSpecifiers": true
   }
